position control: fix extra padding

--- a/js/webui/src/style.less
+++ b/js/webui/src/style.less
@@ -799,7 +799,7 @@ body {
 }
 
 .position-control {
-    padding: 0.25rem;
+    padding: 0.25rem 0;
     height: 2rem;
 }
 
